# python_tutorial

./: LICENCE  README.md  pyproject.toml
src/palindrome_softwaregeek01/: phrase.py
tests/: test_phrase.py
