[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_package_softwaregeek01"
version = "0.0.2"
authors = [
  {name = "softwaregeek01"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License", 
  "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/palindrome_softwaregeek01"]

[project.urls]
"Homepage" = "https://github.com/SoftwareGeek01/python_tutorial"
"Bug Tracker" = "https://github.com/SoftwareGeek01/python_tutorial/issues"

